test/shouldPass/expr/unPlusDouble.pas
program Sample;
var
  i : double;

begin
  i := + 3.14;
  writeln(i);
end.
